[gd_scene load_steps=2 format=3 uid="uid://byvv0dbstfyt1"]

[ext_resource type="Script" path="res://Inventory.gd" id="1_t4fm6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t4fm6")
metadata/_edit_use_anchors_ = true
metadata/ItemHeld = false

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.351345, 0.353453, 9.62615e-08, 1)
self_modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.22309
anchor_top = 0.183642
anchor_right = 0.22309
anchor_bottom = 0.184
offset_right = 557.0
offset_bottom = 306.768
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel2" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 10.0003
offset_top = 1.99999
offset_right = 533.0
offset_bottom = 24.0

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0125667
anchor_top = 0.0456026
anchor_right = 0.980252
anchor_bottom = 1.00326
offset_left = 17.0
offset_top = 12.0
columns = 10
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00897605
anchor_top = -0.00977194
anchor_right = 0.012568
anchor_bottom = 0.0228013
offset_left = 17.0
offset_top = 250.0
offset_right = 541.0
offset_bottom = 290.0
metadata/_edit_use_anchors_ = true

[node name="Panel49" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Panel50" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Panel51" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Panel52" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Panel53" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Panel54" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Panel55" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Panel56" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Panel57" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Panel58" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 535.0
offset_top = 2.99998
offset_right = 553.0
offset_bottom = 34.0
text = "X"
flat = true

[connection signal="mouse_entered" from="Panel/Panel2" to="." method="_on_panel_2_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Panel2" to="." method="_on_panel_2_mouse_exited"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
